--- a/test.html
+++ b/test.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>XCOLOGY</title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <div class="toto">
+        <div class="right md:center">
             <h1>Coucou</h1>
             <p>vhdfoughrofghoqshgioqerz </p>
         </div>
