--- a/test.html
+++ b/test.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>XCOLOGY</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link href="style.css" rel="stylesheet">
+
     </head>
     <body>
-        <div class="right md:center">
+        <div class="toto">
             <h1>Coucou</h1>
-            <p>vhdfoughrofghoqshgioqerz </p>
+            <p>oui le paragraphe</p>
         </div>
-        <h1>couopcu 2 </h1>
+        <h2>coucou 2</h2>
         <h3>coucou 3</h3>
+        <h4>coucou 4</h4>
+        <h5>coucou 5</h5>
+        <h6>coucou 6</h6>
     </body>
 </html>
