--- a/test.html
+++ b/test.html
@@ -16,5 +16,6 @@
         <h4>coucou 4</h4>
         <h5>coucou 5</h5>
         <h6>coucou 6</h6>
+        <p>ce mot est en <em>italique</em></p>
     </body>
 </html>
